--- a/One/Views/Shared/_ShopLayout.cshtml
+++ b/One/Views/Shared/_ShopLayout.cshtml
@@ -35,7 +35,9 @@
         </nav>
     </header>
 
-    @RenderBody()
+    <div class="container">
+        @RenderBody()
+    </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
