--- a/One/wwwroot/css/site.css
+++ b/One/wwwroot/css/site.css
@@ -1,5 +1,6 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
+﻿body {
+    font-family: 'Epilogue', sans-serif;
+}
 
 a.navbar-brand {
   white-space: normal;
@@ -68,4 +69,111 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+
+
+
+.container {
+    max-width: 960px;
+}
+
+/*
+ * Custom translucent site header
+ */
+
+.site-header {
+    background-color: rgba(0, 0, 0, .85);
+    -webkit-backdrop-filter: saturate(180%) blur(20px);
+    backdrop-filter: saturate(180%) blur(20px);
+}
+
+    .site-header a {
+        color: #999;
+        transition: ease-in-out color .15s;
+    }
+
+        .site-header a:hover {
+            color: #fff;
+            text-decoration: none;
+        }
+
+/*
+ * Dummy devices (replace them with your own or something else entirely!)
+ */
+
+.product-device {
+    position: absolute;
+    right: 10%;
+    bottom: -30%;
+    width: 300px;
+    height: 540px;
+    background-color: #333;
+    border-radius: 21px;
+    -webkit-transform: rotate(30deg);
+    transform: rotate(30deg);
+}
+
+    .product-device::before {
+        position: absolute;
+        top: 10%;
+        right: 10px;
+        bottom: 10%;
+        left: 10px;
+        content: "";
+        background-color: rgba(255, 255, 255, .1);
+        border-radius: 5px;
+    }
+
+.product-device-2 {
+    top: -25%;
+    right: auto;
+    bottom: 0;
+    left: 5%;
+    background-color: #e5e5e5;
+}
+
+
+/*
+ * Extra utilities
+ */
+
+.flex-equal > * {
+    -ms-flex: 1;
+    flex: 1;
+}
+
+@media (min-width: 768px) {
+    .flex-md-equal > * {
+        -ms-flex: 1;
+        flex: 1;
+    }
+   
+}
+
+.overflow-hidden {
+    overflow: hidden;
+}
+
+.hero-div {
+    background-image: url(../img/coffee.jpg);
+    background-position: center;
+    background-size: cover;
+    text-transform: uppercase;
+}
+
+
+@media screen and (min-width: 768px) {
+    .hero-div {
+        height: 500px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .hero-div {
+        height: 600px;
+    }
+}
+.hero-p {
+    margin-bottom: 0;
+    text-transform: uppercase;
 }
