--- a/One/Views/Home/Index.cshtml
+++ b/One/Views/Home/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Jaewon Jeong";
+    ViewData["Title"] = "The Best Coffee Subscription";
 }
 
 <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center hero-div">
     <div class="col-sm-10 col-md-11 p-md-5 mx-auto my-5">
         <p class="lead hero-p">It's here</p>
         <h3 class="display-4 font-weight-normal">Fall Blend 2020</h3>
-        <a class="btn btn-dark" asp-controller="Shop" asp-action="Index">Shop Coffee</a>
+        <a class="btn btn-dark" asp-controller="Coffees" asp-action="Index">Shop Coffee</a>
     </div>
 </div>
 
