--- a/One/Views/Coffees/Index.cshtml
+++ b/One/Views/Coffees/Index.cshtml
@@ -1,33 +1,37 @@
 ﻿@model IEnumerable<One.Models.Coffee>
 
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_ShopLayout.cshtml";
+    ViewData["Title"] = "Shop";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1>Shop</h1>
-</div>
 
 
-<div class="row row-cols-1 row-cols-md-2">
-    <div class="card-deck mb-3 text-center">
-        @foreach (var item in Model)
-        {
-            <div class="card mb-4 shadow-sm">
-                <img src="~/img/@Html.DisplayFor(modelItem => item.Img)" class="card-img-top" alt="joe coffee">
-                <div class="card-body">
-                    <h6 class="card-title pricing-card-title">@Html.DisplayFor(modelItem => item.Name)</h6>
-                    <h6 class="card-title pricing-card-title">@Html.DisplayFor(modelItem => item.Price)</h6>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Shop</button>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> | <a asp-action="Details" asp-route-id="@item.Id">Details</a> | <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </div>
-            </div>
-        }
+<div class="container">
+
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1>Shop</h1>
     </div>
-</div>
+
+
+    <div class="row row-cols-1 row-cols-md-2">
+        <div class="card-deck mb-3 text-center">
+            @foreach (var item in Model)
+            {
+                <div class="card mb-4 shadow-sm">
+                    <img src="~/img/@Html.DisplayFor(modelItem => item.Img)" class="card-img-top" alt="@Html.DisplayFor(modelItem => item.Name)">
+                    <div class="card-body">
+                        <h6 class="card-title pricing-card-title">@Html.DisplayFor(modelItem => item.Name)</h6>
+                        <h6 class="card-title pricing-card-title">@Html.DisplayFor(modelItem => item.Price)</h6>
+                        <button type="button" class="btn btn-lg btn-block btn-outline-primary">Shop</button>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> | <a asp-action="Details" asp-route-id="@item.Id">Details</a> | <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
     <p>
         <a asp-action="Create">Create New</a>
     </p>
 
 
-
+</div>
