--- a/One/Views/Shared/_Layout.cshtml
+++ b/One/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - One - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - One
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
